--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header .IconConteiner p{
 header .menu{
     display: flex;
     margin: 10px 0;
-    border-bottom: 2px double #151313; 
+    border-bottom: 2px solid #151313; 
 }
 
 header .menu li{
@@ -98,12 +98,45 @@ header .menu li a:hover{
 }
 
 .SecStyle{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     max-width: 100%;
+    margin: 2rem;
+    padding: 1rem;
     border-radius: 20px;
     background: rgba(0, 0, 0, 0.37);
     box-shadow: 0 8px 32px 0 rgba(0, 255, 13, 0.37);
     backdrop-filter: blur (0.5px);
     border:1px solid rgba(255, 255, 255, 0.18)
+}
+
+.SecStyle .Gallery{
+    max-width: 700px;
+    display: grid;
+    grid-template-columns: 230px 230px 230px;
+    grid-template-rows: 230px 230px 230px;
+    gap: 0.5rem;
+}
+
+.SecStyle .Gallery img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.SecStyle .Gallery .img-a{
+    grid-column: 1/3;
+}
+
+.SecStyle .Gallery .img-c{
+    grid-row: 2/4;
+}
+
+.SecStyle .Gallery .img-f{
+    grid-column: -3/-1;
 }
 
 
@@ -121,6 +154,11 @@ header .menu li a:hover{
 .SpanBlack{
     text-shadow: 0 0 5px #000000, 0 0 30px #000000 ;
     color: #000000;
+}
+
+.SpanBeige{
+    text-shadow: 0 0 5px beige, 0 0 30px beige ;
+    color: beige;
 }
 
 
@@ -172,9 +210,21 @@ title span{
 }
 
 .color-button-switer{
-    text-shadow: 0 0 5px #50ad6a, 0 0 30px #50ad6a ;
-    color: #50ad6a;
+    text-shadow: 0 0 5px beige, 0 0 30px beige ;
+    color: beige;
 }
 
+.TituloEd{
+    font-size: 4.5vh;
+    margin: 20px;
+    text-shadow: 0 0 5px beige, 0 0 30px beige;
+    color: beige;
+    font-weight: bold;
+}
 
+.ParrafSec{
+    margin: 20px;
+    font-size: 3vh;
+    font-weight: bold;
+}
 
